--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,13 @@
 body{
-    text-align: center;
     background-color: rgb(50, 50, 50);
+    margin: 0;
+}
+
+.media{
+    width: 100%;
+    height: 30%;
+    position: absolute;
+    bottom: 0;
 }
 
 #play{
@@ -11,9 +18,22 @@ body{
     border-style: solid;
     border-width: 50px 0 50px 86.6px;
     border-color: transparent transparent transparent #c59afa;
-    bottom: 3rem;
-    position: absolute;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5rem;
 }
 #play:hover{
     border-color: transparent transparent transparent #9742ff;
 }
+
+#guessSong{
+  font-size: 3rem;
+  border-style: none;
+  border-radius: 5rem;
+  text-align: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
