--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,14 +8,13 @@ body{
     height: 30%;
     position: absolute;
     bottom: 0;
-    background-color: black;
 }
 
 #play{
     width: 0px;
     height: 0px;
     transform:rotate(360deg);
-    background-color: rgb(50, 50, 50);
+    background-color: rgba(50, 50, 50, 0);
     border-style: solid;
     border-width: 50px 0 50px 86.6px;
     border-color: transparent transparent transparent #c59afa;
