--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,7 +5,7 @@ body{
 
 .media{
     width: 100%;
-    height: 30%;
+    height: 40%;
     position: absolute;
     bottom: 0;
 }
@@ -16,7 +16,7 @@ body{
     transform:rotate(360deg);
     background-color: rgba(50, 50, 50, 0);
     border-style: solid;
-    border-width: 50px 0 50px 86.6px;
+    border-width: 6rem 0 6rem 9rem;
     border-color: transparent transparent transparent #c59afa;
     display: block;
     margin-left: auto;
@@ -35,5 +35,6 @@ body{
   display: block;
   margin-left: auto;
   margin-right: auto;
+  width: 50rem;
 }
 
